add cross sell buttons in es-routine

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </section>
 
     <section class="es-video">
-      
+
       <div class="es-video__videoCnt">
         <img src="./img/video.png"> <!-- remove this -->
         <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
@@ -146,7 +146,7 @@
           <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/AM8_yie72W8"
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe> -->
-        </div>
+      </div>
       </div>
     </section>
 
@@ -159,36 +159,39 @@
       <div class="es-routine__bg">
         <h2 class="es-routine__header">Wypróbuj całą rutynę <span>hair food pineapple</span></h2>
         <div class="es-routine__wrapper--flex">
-          <!-- <a href="###" target="_blank"> -->
           <figure class="es-routine__single">
-            <img class="es-routine__img" src="./img/shampoo.png">
+            <div class="es-routine__img">
+              <img src="./img/shampoo.png">
+              <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
+            </div>
             <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-left.png">
             <figcaption>
               <p class="es-routine__header--S">szampon</p>
               <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
             </figcaption>
           </figure>
-          <!-- </a> -->
-          <!-- <a href="###" target="_blank"> -->
           <figure class="es-routine__single">
-            <img class="es-routine__img" src="./img/mask.png">
+            <div class="es-routine__img">
+              <img src="./img/mask.png">
+              <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
+            </div>
             <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-left.png">
             <figcaption>
               <p class="es-routine__header--S">maska</p>
               <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
             </figcaption>
           </figure>
-          <!-- </a> -->
-          <!-- <a href="###" target="_blank"> -->
           <figure class="es-routine__single">
-            <img class="es-routine__img" src="./img/conditioner.png">
+            <div class="es-routine__img">
+              <img src="./img/conditioner.png">
+              <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
+            </div>
             <img class="es-routine__arrow es-routine__arrow--3" src="./img/arrow-left.png">
             <figcaption>
               <p class="es-routine__header--S">odżywka</p>
               <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
             </figcaption>
           </figure>
-          <!-- </a> -->
         </div>
       </div>
 
