add hover effects to cross sell

--- a/index.html
+++ b/index.html
@@ -209,36 +209,36 @@
     <section class="es-cross">
       <h2 class="es-cross__header">Wybierz ulubionego <span>hair drinka</span> dla swoich spragnionych włosów!</h2>
       <div class=es-cross__wrapper--flex>
-        <!-- <a href="###" target="_blank"> -->
         <figure class="es-cross__single">
-          <img src="./img/pineapple.png">
+          <div class="es-cross__img-container">
+            <img src="./img/pineapple.png">
+          </div>
           <figcaption class="es-cross__figcaption--1">
             <h3 class="es-cross__title">Ananas</h3>
             <p class="es-cross__subtitle">48H blasku*</p>
             <p class="es-cross__descr">dla długich, matowych włosów</p>
           </figcaption>
         </figure>
-        <!-- </a> -->
-        <!-- <a href="###" target="_blank"> -->
         <figure class="es-cross__single">
-          <img src="./img/papaya.png">
+          <div class="es-cross__img-container">
+            <img src="./img/papaya.png">
+          </div>
           <figcaption class="es-cross__figcaption--2">
             <h3 class="es-cross__title">Papaja</h3>
             <p class="es-cross__subtitle">93% mniej </br>złamanych włosów*</p>
             <p class="es-cross__descr">dla zniszczonych włosów</p>
           </figcaption>
         </figure>
-        <!-- </a> -->
-        <!-- <a href="###" target="_blank"> -->
         <figure class="es-cross__single">
-          <img src="./img/banana.png">
+          <div class="es-cross__img-container">
+            <img src="./img/banana.png">
+          </div>
           <figcaption class="es-cross__figcaption--3">
             <h3 class="es-cross__title">Banan</h3>
             <p class="es-cross__subtitle">10x bardziej </br>odżywione włosy*</p>
             <p class="es-cross__descr">dla suchych włosów</p>
           </figcaption>
         </figure>
-        <!-- </a> -->
       </div>
     </section>
 
