add cross sell btn styles and hover

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
             <h3 class="es-cross__title">Ananas</h3>
             <p class="es-cross__subtitle">48H blasku*</p>
             <p class="es-cross__descr">dla długich, matowych włosów</p>
+            <a href="#" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
         <figure class="es-cross__single">
@@ -227,6 +228,7 @@
             <h3 class="es-cross__title">Papaja</h3>
             <p class="es-cross__subtitle">93% mniej </br>złamanych włosów*</p>
             <p class="es-cross__descr">dla zniszczonych włosów</p>
+            <a href="#" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
         <figure class="es-cross__single">
@@ -237,6 +239,7 @@
             <h3 class="es-cross__title">Banan</h3>
             <p class="es-cross__subtitle">10x bardziej </br>odżywione włosy*</p>
             <p class="es-cross__descr">dla suchych włosów</p>
+            <a href="#" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
       </div>
