--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Garnier Fructis Hair Drink</title>
+  <title>Garnier Fructis Hair Food Pineapple</title>
   <!-- fonts -->
   <link
     href="https://www.dafontfree.net/embed/Z290aGFtLWNvbmRlbnNlZC1ib2xkJmRhdGEvNDYvZy82MjgwMi9Hb3RoYW1Db25kZW5zZWQtQm9sZC5vdGY"
