--- a/index.html
+++ b/index.html
@@ -21,25 +21,26 @@
 <body>
   <section id="es-RC-container">
     <section class="es-hero">
-      <header class="es-hero__left">
-        <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png" />
-        <p class="es-hero__left--new">nowość</p>
-        <h1 class="es-hero__left--title">hair drink</h1>
-        <p class="es-hero__left--subtitle">
-          niesamowity blask włosów w 10s, dzięki błyskawicznej odżywce
-          lamellarnej
-        </p>
-      </header>
 
-      <div class="es-hero__right">
-        <div class="es-hero__middle">
-          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png" />
-          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png" />
-        </div>
-        <div class="es-hero__right--headline">
-          <p>10x gładsze włosy* </br>efekt tafli wody</p>
+      <div class="es-hero__left">
+        <div class="es-hero__left--headline">
+          <p>hair food</p>
+          <p>48h <span>BLASKU*</span></p>
+          <p class="es-hero__left--smaller">2x mniej rozdwojonych końcówek*</p>
         </div>
       </div>
+
+      <header class="es-hero__right">
+        <img class="es-hero__right--logo" src="./img/garnier-fructis-logo.png" />
+        <div class="es-hero__right--container">
+          <p class="es-hero__right--new">nowość</p>
+          <img class="es-hero__right--badge" src="./img/badge-97-percent-natural-origin.png" />
+          <img class="es-hero__right--packshot" src="./img/packshot.png" />
+        </div>
+        
+      </header>
+
+      
     </section>
 
     <section class="es-benefits">
