add es-benefits markup&styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <body>
   <section id="es-RC-container">
     <section class="es-hero">
-
       <div class="es-hero__left">
         <div class="es-hero__left--headline">
           <p>hair food</p>
@@ -29,7 +28,6 @@
           <p class="es-hero__left--smaller">2x mniej rozdwojonych końcówek*</p>
         </div>
       </div>
-
       <header class="es-hero__right">
         <img class="es-hero__right--logo" src="./img/garnier-fructis-logo.png" />
         <div class="es-hero__right--container">
@@ -37,56 +35,52 @@
           <img class="es-hero__right--badge" src="./img/badge-97-percent-natural-origin.png" />
           <img class="es-hero__right--packshot" src="./img/packshot.png" />
         </div>
-        
       </header>
-
-      
     </section>
 
     <section class="es-benefits">
       <header class="es-benefits__header">
         <div class="es-benefits__header--container">
-          <p class="es-benefits__header--subtitle">szukasz natychmiastowego efektu transformacji włosów?</p>
+          <p class="es-benefits__header--subtitle">długie, matowe włosy i zniszczone końce?</p>
           <p class="es-benefits__header--subtitle--regular">
-            Wypróbuj nowość! Garnier Fructis Hair Drink dla natychmiastowo
-            gładkich, błyszczących włosów bez obciążenia.
+            Już nie! Nowa gama Fructis Hair Food Pineapple zapewnia olśniewający blask i odżywia włosy nadając im zdrowy wygląd!
           </p>
         </div>
         <div class="es-benefits__main">
           <h1 class="es-benefits__main--title">
             dlaczego twoje włosy pokochają
-            <span>hair drink?</span>
+            <span>hair food pineapple?</span>
           </h1>
         </div>
       </header>
 
       <section class="es-benefits__icon-wrapper">
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-immediate-effect.png">
+          <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.png">
           <figcaption>
-            <p class="es-benefits__icon-single--title">Natychmiastowe działanie</p>
-            <p class="es-benefits__icon-single--descr">Efekt transformacji włosów w 10 sekund.</p>
+            <p class="es-benefits__icon-single--title">Składniki naturalnego pochodzenia</p>
+            <p class="es-benefits__icon-single--descr">Wegańska formuła i aż do 97% składników pochodzenia naturalnego.</p>
+          </figcaption>
+        </figure>
+        <figure class="es-benefits__icon-single">
+          <img class="es-benefits__icon-single--img" src="./img/icon-pineapple.png">
+          <figcaption>
+            <p class="es-benefits__icon-single--title">Ekstrakt z ananasa</p>
+            <p class="es-benefits__icon-single--descr">Egzotyczny zapach włosów na długo.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
           <img class="es-benefits__icon-single--img" src="./img/icon-smoother-hair.png">
           <figcaption>
-            <p class="es-benefits__icon-single--title">Efekt tafli wody</p>
-            <p class="es-benefits__icon-single--descr">Niesamowity blask i 10x gładsze włosy*.</p>
+            <p class="es-benefits__icon-single--title">Olśniewający blask</p>
+            <p class="es-benefits__icon-single--descr">Lśniące włosy aż do 48h*.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-97-percent-natural-ingredients.png">
+          <img class="es-benefits__icon-single--img" src="./img/icon-nourishment.png">
           <figcaption>
-            <p class="es-benefits__icon-single--title">Składniki</p>
-            <p class="es-benefits__icon-single--descr">97% składników naturalnego pochodzenia.</p>
-          </figcaption>
-        </figure>
-        <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.png">
-          <figcaption>
-            <p class="es-benefits__icon-single--title">Wegańska formuła</p>
-            <p class="es-benefits__icon-single--descr">Bez silikonów dla naturalnych w dotyku włosów.</p>
+            <p class="es-benefits__icon-single--title">Intensywne odżywianie w lekkich formułach</p>
+            <p class="es-benefits__icon-single--descr">2x mniej rozdwojonych końcówek*.</p>
           </figcaption>
         </figure>
       </section>
