es-how add markup and styles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div class="es-benefits__header--container">
           <p class="es-benefits__header--subtitle">długie, matowe włosy i zniszczone końce?</p>
           <p class="es-benefits__header--subtitle--regular">
-            Już nie! Nowa gama Fructis Hair Food Pineapple zapewnia olśniewający blask i odżywia włosy nadając im zdrowy wygląd!
+            Już nie! Nowa gama Fructis Hair Food Pineapple zapewnia olśniewający blask i odżywia włosy nadając im zdrowy
+            wygląd!
           </p>
         </div>
         <div class="es-benefits__main">
@@ -59,7 +60,8 @@
           <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.png">
           <figcaption>
             <p class="es-benefits__icon-single--title">Składniki naturalnego pochodzenia</p>
-            <p class="es-benefits__icon-single--descr">Wegańska formuła i aż do 97% składników pochodzenia naturalnego.</p>
+            <p class="es-benefits__icon-single--descr">Wegańska formuła i aż do 97% składników pochodzenia naturalnego.
+            </p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
@@ -89,11 +91,24 @@
     </section>
 
     <section class="es-how">
+      <h1 class="es-how__title"><span>Używaj maski</span>tak jak lubisz</h1>
       <div class="es-how__wrapper">
-        <h1 class="es-how__title">Jak to <span>działa?</span></h1>
-        <p class="es-how__descr">Woda lamellarna natychmiastowo pokrywa włókna włosów odbijającą światło warstwą nadając
-          efekt tafli!</p>
+        <div class="es-how__item es-how__item--1">
+          <p class="es-how__item--heading">1. Jako maska:</p>
+          <p class="es-how__item--descr">Nałóż na całą długość włosów i pozostaw na przynajmniej 3-5 minut dla
+            maksymalnego odżywienia.</p>
+        </div>
+        <div class="es-how__item es-how__item--2">
+          <p class="es-how__item--heading">2. Jako odżywka:</p>
+          <p class="es-how__item--descr">Stosuj na mokre włosy po użyciu szamponu dla łatwiejszego rozczesywania.</p>
+        </div>
+        <div class="es-how__item es-how__item--3">
+          <p class="es-how__item--heading">3. Jako odżywka </br>bez spłukiwania:</p>
+          <p class="es-how__item--descr">Nałóż po umyciu na wilgotne lub suche włosy dla odżywionych końców pełnych
+            blasku.</p>
+        </div>
       </div>
+
     </section>
 
     <section class="es-use">
