--- a/index.html
+++ b/index.html
@@ -111,32 +111,25 @@
 
     </section>
 
-    <section class="es-use">
-      <div class="es-use__container">
-        <h2 class="es-use__title">Jak używać <span>fructis hair drink?</span></h2>
+    <section class="es-ingredients">
+      <div class="es-ingredients__container">
+        <h2 class="es-ingredients__title">Poznaj składniki <span>hair food pineapple</span></h2>
+        <figure class="es-ingredients__container--inner">
+          <img src="./img/packs-ingredients.png"></img>
+          <figcaption>
+            <div class="es-ingredients__single">
+              <p class="es-ingredients__single--title">Składniki aktywne:</p>
+              <p>Ekstrakt z ananasa, ekstrakt z amli</p>
+            </div>
+            <div class="es-ingredients__single">
+              <p class="es-ingredients__single--title">Emolienty:</p>
+              <p>Olej słonecznikowy, olej kokosowy, masło shea</p>
+            </div>
+          </figcaption>
+        </figure>
       </div>
       <div class="es-use__wrapper">
-        <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-1-squeeze-water-out.png">
-          <figcaption>
-            <p class="es-use__single--step">Krok 1</p>
-            <p class="es-use__single--descr">Po umyciu szamponem odciśnij z włosów nadmiar wody.</p>
-          </figcaption>
-        </figure>
-        <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-2-apply-on-hair.png">
-          <figcaption>
-            <p class="es-use__single--step">Krok 2</p>
-            <p class="es-use__single--descr">Aplikuj omijając skórę głowy.</p>
-          </figcaption>
-        </figure>
-        <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-3-wait-and-rinse.png">
-          <figcaption>
-            <p class="es-use__single--step">Krok 3</p>
-            <p class="es-use__single--descr">Wmasuj przez 10 sekund, spłucz i wysusz włosy jak zwykle.</p>
-          </figcaption>
-        </figure>
+        
       </div>
       <!-- <div class="es-use__video--wrapper">
           <video controls playsinline poster="./img/video.png" id="es-use__video--player">
