--- a/index.html
+++ b/index.html
@@ -115,22 +115,20 @@
       <div class="es-ingredients__container">
         <h2 class="es-ingredients__title">Poznaj składniki <span>hair food pineapple</span></h2>
         <figure class="es-ingredients__container--inner">
-          <img src="./img/packs-ingredients.png"></img>
+          <img class="es-ingredients__img" src="./img/packs-ingredients.png"></img>
           <figcaption>
             <div class="es-ingredients__single">
               <p class="es-ingredients__single--title">Składniki aktywne:</p>
-              <p>Ekstrakt z ananasa, ekstrakt z amli</p>
+              <p>Ekstrakt z ananasa, </br>ekstrakt z amli</p>
             </div>
             <div class="es-ingredients__single">
               <p class="es-ingredients__single--title">Emolienty:</p>
-              <p>Olej słonecznikowy, olej kokosowy, masło shea</p>
+              <p>Olej słonecznikowy, </br>olej kokosowy, </br>masło shea</p>
             </div>
           </figcaption>
         </figure>
       </div>
-      <div class="es-use__wrapper">
-        
-      </div>
+      
       <!-- <div class="es-use__video--wrapper">
           <video controls playsinline poster="./img/video.png" id="es-use__video--player">
             <source src="" type="video/mp4">
