es-video layout markup

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </figcaption>
         </figure>
       </div>
-      
+
       <!-- <div class="es-use__video--wrapper">
           <video controls playsinline poster="./img/video.png" id="es-use__video--player">
             <source src="" type="video/mp4">
@@ -139,16 +139,17 @@
     </section>
 
     <section class="es-video">
-
-      <div class="es-video__videoCnt">
-        <img src="./img/video.png"> <!-- remove this -->
-        <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
-        <!-- <div class="es-video__container">
+      <h2 class="es-video__title">Zobacz jak używać gamy <span>hair food pineapple</span></h2>
+        <div class="es-video__videoCnt">
+          <img src="./img/video.png"> <!-- remove this -->
+          <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
+          <!-- <div class="es-video__container">
           <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/AM8_yie72W8"
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe> -->
-      </div>
-      </div>
+            allowfullscreen></iframe>
+        </div> -->
+        </div>
+      <div class="es-video__border"></div>
     </section>
 
     <section class="es-before-after">
