es-routeine layout and markup

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <img src="./img/shampoo.png">
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-left.png">
+            <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-white.png">
             <figcaption>
               <p class="es-routine__header--S">szampon</p>
               <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
@@ -173,7 +173,7 @@
               <img src="./img/mask.png">
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-left.png">
+            <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-white.png">
             <figcaption>
               <p class="es-routine__header--S">maska</p>
               <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
@@ -184,10 +184,21 @@
               <img src="./img/conditioner.png">
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--3" src="./img/arrow-left.png">
+            <img class="es-routine__arrow es-routine__arrow--3" src="./img/arrow-white.png">
             <figcaption>
               <p class="es-routine__header--S">odżywka</p>
               <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
+            </figcaption>
+          </figure>
+          <figure class="es-routine__single">
+            <div class="es-routine__img">
+              <img src="./img/hair-drink.png">
+              <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
+            </div>
+            <img class="es-routine__arrow es-routine__arrow--4" src="./img/arrow-white.png">
+            <figcaption>
+              <p class="es-routine__header--S">hair drink</p>
+              <p class="es-routine__descr">Nadaje włosom efekt tafli w 10 sekund.</p>
             </figcaption>
           </figure>
         </div>
