cross sell hover effects

--- a/index.html
+++ b/index.html
@@ -216,38 +216,42 @@
     </section>
 
     <section class="es-cross">
-      <h2 class="es-cross__header">Wybierz ulubionego <span>hair drinka</span> dla swoich spragnionych włosów!</h2>
+      <h2 class="es-cross__header">Poznaj też inne <span>superowoce</span></h2>
       <div class=es-cross__wrapper--flex>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <img src="./img/pineapple.png">
+            <img src="./img/line-cocoa.png">
           </div>
           <figcaption class="es-cross__figcaption--1">
-            <h3 class="es-cross__title">Ananas</h3>
-            <p class="es-cross__subtitle">48H blasku*</p>
-            <p class="es-cross__descr">dla długich, matowych włosów</p>
+            <div class="es-cross__figcaption--inside">
+              <h3 class="es-cross__title">Kokos</h3>
+              <p class="es-cross__subtitle">Włosy puszące się</p>
+            </div>
             <a href="#" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
+          
         </figure>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <img src="./img/papaya.png">
+            <img src="./img/line-banana.png">
           </div>
           <figcaption class="es-cross__figcaption--2">
-            <h3 class="es-cross__title">Papaja</h3>
-            <p class="es-cross__subtitle">93% mniej </br>złamanych włosów*</p>
-            <p class="es-cross__descr">dla zniszczonych włosów</p>
+            <div class="es-cross__figcaption--inside">
+              <h3 class="es-cross__title">Banan</h3>
+              <p class="es-cross__subtitle">Włosy suche</p>
+            </div>
             <a href="#" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <img src="./img/banana.png">
+            <img src="./img/line-papaya.png">
           </div>
           <figcaption class="es-cross__figcaption--3">
-            <h3 class="es-cross__title">Banan</h3>
-            <p class="es-cross__subtitle">10x bardziej </br>odżywione włosy*</p>
-            <p class="es-cross__descr">dla suchych włosów</p>
+            <div class="es-cross__figcaption--inside">
+              <h3 class="es-cross__title">Papaja</h3>
+              <p class="es-cross__subtitle">Włosy zniszczone</p>
+            </div>
             <a href="#" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
