hotfix routine / cross

--- a/index.html
+++ b/index.html
@@ -259,9 +259,7 @@
     </section>
 
     <section class="es-disclaimer">
-      <p>* Testy instrumentalne.</p>
-      <p>** Ilustracja oczekiwanych rezultatów. Indywidualne efekty mogą się różnić. Zdjęcia wykonane po użyciu urządzeń
-        do stylizacji włosów na gorąco.</p>
+      <p>* Testy instrumentalne po użyciu szamponu i maski.</p>
       <p>*** Poza korkiem, barwnikiem, dodatkami.</p>
     </section>
 
