--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Garnier Fructis Hair Food Pineapple</title>
   <!-- fonts -->
-  <link
-    href="https://www.dafontfree.net/embed/Z290aGFtLWNvbmRlbnNlZC1ib2xkJmRhdGEvNDYvZy82MjgwMi9Hb3RoYW1Db25kZW5zZWQtQm9sZC5vdGY"
-    rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">  
   <!-- stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
