--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">  
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet">
   <!-- stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -136,15 +138,15 @@
 
     <section class="es-video">
       <h2 class="es-video__title">Zobacz jak używać gamy <span>hair food pineapple</span></h2>
-        <div class="es-video__videoCnt">
-          <img src="./img/video.png"> <!-- remove this -->
-          <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
-          <!-- <div class="es-video__container">
+      <div class="es-video__videoCnt">
+        <img src="./img/video.png"> <!-- remove this -->
+        <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
+        <!-- <div class="es-video__container">
           <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/AM8_yie72W8"
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div> -->
-        </div>
+      </div>
       <div class="es-video__border"></div>
     </section>
 
@@ -225,7 +227,7 @@
             </div>
             <a href="#" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
-          
+
         </figure>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
