fix access paths

--- a/3600542500395.html
+++ b/3600542500395.html
@@ -13,7 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat:wght@400;700&display=swap"
     rel="stylesheet">
   <!-- stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./3600542500395/style/style.css" />
 </head>
 
 <body>
@@ -27,11 +27,11 @@
         </div>
       </div>
       <header class="es-hero__right">
-        <img class="es-hero__right--logo" src="./img/garnier-fructis-logo.png" />
+        <img class="es-hero__right--logo" src="./3600542500395/images/garnier-fructis-logo.png" />
         <div class="es-hero__right--container">
           <p class="es-hero__right--new">nowość</p>
-          <img class="es-hero__right--badge" src="./img/badge-97-percent-natural-origin.png" />
-          <img class="es-hero__right--packshot" src="./img/packshot.png" />
+          <img class="es-hero__right--badge" src="./3600542500395/images/badge-97-percent-natural-origin.png" />
+          <img class="es-hero__right--packshot" src="./3600542500395/images/packshot.png" />
         </div>
       </header>
     </section>
@@ -55,7 +55,7 @@
 
       <section class="es-benefits__icon-wrapper">
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.png">
+          <img class="es-benefits__icon-single--img" src="./3600542500395/images/icon-vegan-formula.png">
           <figcaption>
             <p class="es-benefits__icon-single--title">Składniki naturalnego pochodzenia</p>
             <p class="es-benefits__icon-single--descr">Wegańska formuła i aż do 97% składników pochodzenia naturalnego.
@@ -63,21 +63,21 @@
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-pineapple.png">
+          <img class="es-benefits__icon-single--img" src="./3600542500395/images/icon-pineapple.png">
           <figcaption>
             <p class="es-benefits__icon-single--title">Ekstrakt z ananasa</p>
             <p class="es-benefits__icon-single--descr">Egzotyczny zapach włosów na długo.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-smoother-hair.png">
+          <img class="es-benefits__icon-single--img" src="./3600542500395/images/icon-smoother-hair.png">
           <figcaption>
             <p class="es-benefits__icon-single--title">Olśniewający blask</p>
             <p class="es-benefits__icon-single--descr">Lśniące włosy aż do 48h*.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-nourishment.png">
+          <img class="es-benefits__icon-single--img" src="./3600542500395/images/icon-nourishment.png">
           <figcaption>
             <p class="es-benefits__icon-single--title">Intensywne odżywianie w lekkich formułach</p>
             <p class="es-benefits__icon-single--descr">2x mniej rozdwojonych końcówek*.</p>
@@ -113,7 +113,7 @@
       <div class="es-ingredients__container">
         <h2 class="es-ingredients__title">Poznaj składniki <span>hair food pineapple</span></h2>
         <figure class="es-ingredients__container--inner">
-          <img class="es-ingredients__img" src="./img/packs-ingredients.png"></img>
+          <img class="es-ingredients__img" src="./3600542500395/images/packs-ingredients.png"></img>
           <figcaption>
             <div class="es-ingredients__single">
               <p class="es-ingredients__single--title">Składniki aktywne:</p>
@@ -128,7 +128,7 @@
       </div>
 
       <!-- <div class="es-use__video--wrapper">
-          <video controls playsinline poster="./img/video.png" id="es-use__video--player">
+          <video controls playsinline poster="./3600542500395/images/video.png" id="es-use__video--player">
             <source src="" type="video/mp4">
             <source src="" type="video/ogg">
             Twoja przeglądarka nie pozwala na wyświetlanie filmów.
@@ -139,7 +139,7 @@
     <section class="es-video">
       <h2 class="es-video__title">Zobacz jak używać gamy <span>hair food pineapple</span></h2>
       <div class="es-video__videoCnt">
-        <img src="./img/video.png"> <!-- remove this -->
+        <img src="./3600542500395/images/video.png"> <!-- remove this -->
         <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
         <!-- <div class="es-video__container">
           <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/AM8_yie72W8"
@@ -157,10 +157,10 @@
         <div class="es-routine__wrapper--flex">
           <figure class="es-routine__single">
             <div class="es-routine__img">
-              <img src="./img/shampoo.png">
+              <img src="./3600542500395/images/shampoo.png">
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-white.png">
+            <img class="es-routine__arrow es-routine__arrow--1" src="./3600542500395/images/arrow-white.png">
             <figcaption>
               <p class="es-routine__header--S">szampon</p>
               <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
@@ -168,10 +168,10 @@
           </figure>
           <figure class="es-routine__single">
             <div class="es-routine__img">
-              <img src="./img/mask.png">
+              <img src="./3600542500395/images/mask.png">
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-white.png">
+            <img class="es-routine__arrow es-routine__arrow--2" src="./3600542500395/images/arrow-white.png">
             <figcaption>
               <p class="es-routine__header--S">maska</p>
               <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
@@ -179,10 +179,10 @@
           </figure>
           <figure class="es-routine__single">
             <div class="es-routine__img">
-              <img src="./img/conditioner.png">
+              <img src="./3600542500395/images/conditioner.png">
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--3" src="./img/arrow-white.png">
+            <img class="es-routine__arrow es-routine__arrow--3" src="./3600542500395/images/arrow-white.png">
             <figcaption>
               <p class="es-routine__header--S">odżywka</p>
               <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
@@ -190,10 +190,10 @@
           </figure>
           <figure class="es-routine__single">
             <div class="es-routine__img">
-              <img src="./img/hair-drink.png">
+              <img src="./3600542500395/images/hair-drink.png">
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--4" src="./img/arrow-white.png">
+            <img class="es-routine__arrow es-routine__arrow--4" src="./3600542500395/images/arrow-white.png">
             <figcaption>
               <p class="es-routine__header--S">hair drink</p>
               <p class="es-routine__descr">Nadaje włosom efekt tafli w 10 sekund.</p>
@@ -218,7 +218,7 @@
       <div class=es-cross__wrapper--flex>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <img src="./img/line-cocoa.png">
+            <img src="./3600542500395/images/line-cocoa.png">
           </div>
           <figcaption class="es-cross__figcaption--1">
             <div class="es-cross__figcaption--inside">
@@ -231,7 +231,7 @@
         </figure>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <img src="./img/line-banana.png">
+            <img src="./3600542500395/images/line-banana.png">
           </div>
           <figcaption class="es-cross__figcaption--2">
             <div class="es-cross__figcaption--inside">
@@ -243,7 +243,7 @@
         </figure>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <img src="./img/line-papaya.png">
+            <img src="./3600542500395/images/line-papaya.png">
           </div>
           <figcaption class="es-cross__figcaption--3">
             <div class="es-cross__figcaption--inside">
@@ -262,7 +262,7 @@
     </section>
 
     <footer class="es-footer">
-      <img src="./img/footer.png">
+      <img src="./3600542500395/images/footer.png">
     </footer>
 
   </section>
