add vid markup and poster image

--- a/3600542500395.html
+++ b/3600542500395.html
@@ -139,13 +139,19 @@
     <section class="es-video">
       <h2 class="es-video__title">Zobacz jak używać gamy <span>hair food pineapple</span></h2>
       <div class="es-video__videoCnt">
-        <img src="./3600542500395/images/video.png"> <!-- remove this -->
-        <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
+        <!-- for YT vid -->
         <!-- <div class="es-video__container">
           <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/AM8_yie72W8"
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div> -->
+        <div class="es-video__wrapper">
+          <video controls playsinline poster="./3600542500395/images/hairfood-howto-poster-min.png" id="es-video__player">
+            <source src="./3600542500395/videos/hairfood-howto.mp4" type="video/mp4">
+            <source src="./3600542500395/videos/hairfood-howto.mp4" type="video/ogg">
+            Twoja przeglądarka nie pozwala na wyświetlanie filmów.
+          </video>
+        </div>
       </div>
       <div class="es-video__border"></div>
     </section>
